# auth-service/docs/swagger.json
@@ -433,7 +433,7 @@
                 "tags": [
                     "groups"
                 ],
-                "summary": "List group invitations",
+                "summary": "List group invitations of current user",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -627,6 +627,55 @@
                 }
             }
         },
+        "/groups/{id}/invitations": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "List pending invitations (Owner sees all, Members see their own)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "groups"
+                ],
+                "summary": "List group invitations which the current user is invited to",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Group ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/auth-service_internal_domain.SentInvitationResponse"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/auth-service_internal_web_helpers.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/auth-service_internal_web_helpers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/groups/{id}/members": {
             "get": {
                 "security": [
@@ -634,7 +683,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "List all members of a group",
+                "description": "List all members of a group (Members only)",
                 "produces": [
                     "application/json"
                 ],
@@ -659,6 +708,12 @@
                             "items": {
                                 "$ref": "#/definitions/auth-service_internal_domain.GroupMember"
                             }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/auth-service_internal_web_helpers.ErrorResponse"
                         }
                     },
                     "404": {
@@ -1285,9 +1340,6 @@
                 "created_at": {
                     "type": "string"
                 },
-                "group_id": {
-                    "type": "string"
-                },
                 "invited_by": {
                     "type": "string"
                 },
@@ -1314,11 +1366,11 @@
                 "group": {
                     "$ref": "#/definitions/auth-service_internal_domain.GroupInfo"
                 },
-                "group_id": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
+                },
+                "invite_to": {
+                    "$ref": "#/definitions/auth-service_internal_domain.UserInfo"
                 },
                 "inviter": {
                     "$ref": "#/definitions/auth-service_internal_domain.UserInfo"
@@ -1364,6 +1416,35 @@
                     "type": "string"
                 },
                 "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth-service_internal_domain.SentInvitationResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "group_id": {
+                    "type": "string"
+                },
+                "invited_by": {
+                    "type": "string"
+                },
+                "inviter_name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "user_email": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                },
+                "user_name": {
                     "type": "string"
                 }
             }
